2008-08-22  Tim Waugh  <twaugh@redhat.com>

	* cupsconnection.c (Connection_getJobs): Support limit and
	first-job-id attributes (trac #1).

2008-07-15  Tim Waugh  <twaugh@redhat.com>

	* cupsconnection.c (Connection_getPPDs): Return all attributes,
	not just a selection.

2008-07-14  Tim Waugh  <twaugh@redhat.com>

	* Makefile: Version 1.9.41.

2008-07-14  Tim Waugh  <twaugh@redhat.com>

	* cupsconnection.c (Connection_putFile): Allow destination to be a
	file descriptor or a Python file object, and call cupsPutFd() in
	those cases.

2008-07-09  Tim Waugh  <twaugh@redhat.com>

	* cupsconnection.c (Connection_getPrinterAttributes): Fixed
	requested_attributes parameter.

2008-06-20  Tim Waugh  <twaugh@redhat.com>

	* Makefile: Version 1.9.40.

2008-06-20  Tim Waugh  <twaugh@redhat.com>

	* cupsppd.c (Attribute_repr): New method.
	(cups_AttributeType): Set repr function.

	* cupsppd.c (Group_repr): New method.
	(cups_GroupType): Set repr function.

	* cupsppd.c (Option_repr): New method.
	(cups_OptionType): Set repr function.

	* cupsconnection.c (Dest_repr): New method.
	(cups_DestType): Set repr function.

	* cupsconnection.c (Connection): New structure member, host.
	(Connection_init): Store connected host name.
	(Connection_dealloc): Free it.
	(Connection_repr): New method.  Include host name in repr string.
	(cups_ConnectionType): Set repr function.

	* cupsconnection.c (Connection_init): New optional arguments host,
	port, and encryption.

2008-06-17  Tim Waugh  <twaugh@redhat.com>

	* cupsconnection.c (Connection_getPrinterAttributes): Enum-type
	attributes may be lists.

2008-05-30  Tim Waugh  <twaugh@redhat.com>

	* cupsconnection.c (Connection_getPrinterAttributes): New
	optional requested_attributes argument.

2008-05-29  Tim Waugh  <twaugh@redhat.com>

	* configure.in: Version 1.9.39.

2008-05-29  Tim Waugh  <twaugh@redhat.com>

	* cupsconnection.c (Connection_authenticateJob): Allow auth
	parameter to be optional in order to allow for Kerberos